map fullscreen z-index signin btn bug fix

--- a/geodirectory-assets/css/map.scss
+++ b/geodirectory-assets/css/map.scss
@@ -674,3 +674,6 @@ div.geodir_map_container.geodir-map-iphone .map_background .triggermap {
 .body_fullscreen .geodir_more_info i {
   transform: none;
 }
+.body_fullscreen .b_signin {
+  display: none;
+}
